[package]
name = "catalyst"
version = "0.2.7"
edition = "2024"
readme = "README.md"
license = "MPL-2.0"
description = "A lightweight API testing tool"
repository = "https://github.com/caffeidine/catalyst"
homepage = "https://github.com/caffeidine/catalyst"
categories = ["development-tools"]
keywords = ["testing", "api", "http", "cli", "e2e"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
regex = "1.11.1"
dotenv = "0.15.0"
